# AppliedRoboticsStudentInterface

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  calibrate  camera_params.config  cmake_install.cmake
config_folder/: default.xml  extrinsicCalib.csv  setup.txt
config_folder/image_calibration arena/: default.xml
config_folder/immaginai_presentazione/: dijkstra-eg.dot
include/: find_robot.hpp
src/: Voronoi.cpp  camera_calibration.cpp  clipper.cpp  dubins.cpp  find_collision.cpp  find_robot.cpp  find_victim.cpp  loadImage.cpp  match_template.cpp  plan.cpp  process_arena.cpp  student_interface.cpp  test_dubins.cpp  test_envelop.cpp
src/include/: Voronoi.hpp  dubins.hpp  find_collision.hpp  find_robot.hpp  find_victim.hpp  load_Image.hpp  process_arena.hpp
src/include/boost/mpl/set/aux_/: at_impl.hpp  item.hpp  iterator.hpp  set0.hpp  tag.hpp
src/include/boost/mpl/set/aux_/preprocessed/plain/: set10.hpp  set20.hpp  set30.hpp
